tests/NormalTests/paczka2/big_fuzzy/96269789.err
Error in line 1: 1mHGqX6jzx S431 5,9
Error in line 2: 1mHGqX6jzx A379 62,9
Error in line 12: A379 A754 18,2
Error in line 15: A379 S431 85,9
Error in line 28: 1mHGqX6jzx S674 16,93
Error in line 30: 1mHGqX6jzx S431 28,30
Error in line 27: 5SjlSDJ A379 51,5
Error in line 32: 5SjlSDJ A754 1,4
Error in line 34: 5SjlSDJ S674 93,8
Error in line 29: 1mHGqX6jzx S674 67,8
Error in line 35: 5SjlSDJ A754 88,9
Error in line 36: 1mHGqX6jzx A379 24,8
Error in line 40: izSjsedbP S431 26,4
Error in line 47: 1mHGqX6jzx S431 0,1
Error in line 53: UtjFKs A379 12,7
Error in line 54: 74k8Q S674 45,1
Error in line 57: UtjFKs A319 24,3
Error in line 68: A379 A754 64,1
Error in line 70: A379 A379 55,3
Error in line 67: 5SjlSDJ S674 117,6
Error in line 76: izSjsedbP S431 90,8
Error in line 90: izSjsedbP S431 30,3
Error in line 94: SNVs9 A379 41,1
Error in line 101: UtjFKs A754 25,0
Error in line 120: 74k8Q S674 17,83
Error in line 123: 74k8Q S674 11,8
Error in line 127: 74k8Q S431 39,3
Error in line 134: A379 A754 34,6
Error in line 136: 1mHGqX6jzx S431 94,9
Error in line 149: UtjFKs S431 96,2
Error in line 151: UtjFKs A754 79,8
Error in line 153: 74k8Q A754 364,1
Error in line 155: UtjFKs S431 94,4
Error in line 147: SNVs9 A754 21,6
Error in line 163: SNVs9 S431 48,6
Error in line 171: 5SjlSDJ A754 26,6
Error in line 190: A379 S431 32,1
Error in line 203: A379 A379 129,99
Error in line 193: UtjFKs A379 15,3
Error in line 200: izSjsedbP A379 252,0
Error in line 206: UtjFKs S431 67,7
Error in line 213: 74k8Q S674 403,7
Error in line 214: 74k8Q S431 43,8
Error in line 227: SNVs9 S674 78,4
Error in line 238: UtjFKs S674 26,5
Error in line 240: 5SjlSDJ A754 5,6
